src/cyw43_ll.h

//!\}

/*!
 * \brief Structure to return wifi scan results
 */
//!\{
typedef struct _cyw43_ev_scan_result_t {
    uint32_t _0[5];
    uint8_t bssid[6];   ///< access point mac address
    uint16_t _1[2];
    uint8_t ssid_len;   ///< length of wlan access point name
    uint8_t ssid[32];   ///< wlan access point name
    uint32_t _2[5];
    uint16_t channel;   ///< wifi channel
    uint16_t _3;
    uint8_t auth_mode;  ///< wifi auth mode \ref CYW43_AUTH_
    int16_t rssi;       ///< signal strength
} cyw43_ev_scan_result_t;
//!\}

typedef struct _cyw43_async_event_t {
    uint16_t _0;
    uint16_t flags;
    uint32_t event_type;
    uint32_t status;
    uint32_t reason;
    uint8_t _1[30];
    uint8_t interface;
    uint8_t _2;
    union {
        cyw43_ev_scan_result_t scan_result;
    } u;
} cyw43_async_event_t;
/*!
 * \brief wifi scan options passed to cyw43_wifi_scan
 */
//!\{
typedef struct _cyw43_wifi_scan_options_t {
    uint32_t version;           ///< version (not used)
    uint16_t action;            ///< action (not used)
    uint16_t _;                 ///< not used
    uint32_t ssid_len;          ///< ssid length, 0=all
    uint8_t ssid[32];           ///< ssid name
    uint8_t bssid[6];           ///< bssid (not used)
    int8_t bss_type;            ///< bssid type (not used)
    int8_t scan_type;           ///< scan type 0=active, 1=passive
    int32_t nprobes;            ///< number of probes (not used)
    int32_t active_time;        ///< active time (not used)
    int32_t passive_time;       ///< passive time (not used)
    int32_t home_time;          ///< home time (not used)
    int32_t channel_num;        ///< number of channels (not used)
    uint16_t channel_list[1];   ///< channel list (not used)
} cyw43_wifi_scan_options_t;
//!\}

typedef struct _cyw43_ll_t {
    uint32_t opaque[526 + 7]; // note: array of words
} cyw43_ll_t;
int cyw43_ll_send_ethernet(cyw43_ll_t *self, int itf, size_t len, const void *buf, bool is_pbuf);
int cyw43_ll_wifi_on(cyw43_ll_t *self, uint32_t country);
int cyw43_ll_wifi_pm(cyw43_ll_t *self, uint32_t pm, uint32_t pm_sleep_ret, uint32_t li_bcn, uint32_t li_dtim, uint32_t li_assoc);
int cyw43_ll_wifi_get_pm(cyw43_ll_t *self, uint32_t *pm, uint32_t *pm_sleep_ret, uint32_t *li_bcn, uint32_t *li_dtim, uint32_t *li_assoc);
int cyw43_ll_wifi_scan(cyw43_ll_t *self, cyw43_wifi_scan_options_t *opts);
int cyw43_ll_wifi_join(cyw43_ll_t *self, size_t ssid_len, const uint8_t *ssid, size_t key_len, const uint8_t *key, uint32_t auth_type, const uint8_t *bssid, uint32_t channel);
void cyw43_ll_wifi_set_wpa_auth(cyw43_ll_t *self);
void cyw43_ll_wifi_rejoin(cyw43_ll_t *self);
int cyw43_ll_wifi_ap_init(cyw43_ll_t *self, size_t ssid_len, const uint8_t *ssid, uint32_t auth, size_t key_len, const uint8_t *key, uint32_t channel);
int cyw43_ll_wifi_ap_set_up(cyw43_ll_t *self, bool up);
int cyw43_ll_wifi_ap_get_stas(cyw43_ll_t *self, int *num_stas, uint8_t *macs);
// Get mac address
int cyw43_ll_wifi_get_mac(cyw43_ll_t *self_in, uint8_t *addr);
// Returns true while there's work to do
bool cyw43_ll_has_work(cyw43_ll_t *self);
// Callbacks to be provided by mid-level interface
int cyw43_cb_read_host_interrupt_pin(void *cb_data);
void cyw43_cb_ensure_awake(void *cb_data);
void cyw43_cb_process_async_event(void *cb_data, const cyw43_async_event_t *ev);
void cyw43_cb_process_ethernet(void *cb_data, int itf, size_t len, const uint8_t *buf);