src/cyw43_ll_h.ads


   function cyw43_ll_send_ethernet
     (self : access cyw43_ll_t;
      itf : int;
      len : size_t;
      buf : System.Address;
      is_pbuf : Extensions.bool) return int  -- cyw43_ll.h:259
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_send_ethernet";

   function cyw43_ll_wifi_on (self : access cyw43_ll_t; country : UInt32) return int  -- cyw43_ll.h:261
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_on";

   function cyw43_ll_wifi_pm
     (self : access cyw43_ll_t;
      pm : UInt32;
      pm_sleep_ret : UInt32;
      li_bcn : UInt32;
      li_dtim : UInt32;
      li_assoc : UInt32) return int  -- cyw43_ll.h:262
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_pm";

   function cyw43_ll_wifi_get_pm
     (self : access cyw43_ll_t;
      pm : access UInt32;
      pm_sleep_ret : access UInt32;
      li_bcn : access UInt32;
      li_dtim : access UInt32;
      li_assoc : access UInt32) return int  -- cyw43_ll.h:263
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_get_pm";

   function cyw43_ll_wifi_scan (self : access cyw43_ll_t; opts : access cyw43_wifi_scan_options_t) return int  -- cyw43_ll.h:264
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_scan";

   function cyw43_ll_wifi_join
     (self : access cyw43_ll_t;
      ssid_len : size_t;
      ssid : access UInt8;
      key_len : size_t;
      key : access UInt8;
      auth_type : UInt32;
      bssid : access UInt8;
      channel : UInt32) return int  -- cyw43_ll.h:266
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_join";

   procedure cyw43_ll_wifi_set_wpa_auth (self : access cyw43_ll_t)  -- cyw43_ll.h:267
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_set_wpa_auth";

   procedure cyw43_ll_wifi_rejoin (self : access cyw43_ll_t)  -- cyw43_ll.h:268
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_rejoin";

   function cyw43_ll_wifi_ap_init
     (self : access cyw43_ll_t;
      ssid_len : size_t;
      ssid : access UInt8;
      auth : UInt32;
      key_len : size_t;
      key : access UInt8;
      channel : UInt32) return int  -- cyw43_ll.h:270
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_ap_init";

   function cyw43_ll_wifi_ap_set_up (self : access cyw43_ll_t; up : Extensions.bool) return int  -- cyw43_ll.h:271
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_ap_set_up";

   function cyw43_ll_wifi_ap_get_stas
     (self : access cyw43_ll_t;
      num_stas : access int;
      macs : access UInt8) return int  -- cyw43_ll.h:272
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_ap_get_stas";

   function cyw43_ll_wifi_get_mac (self_in : access cyw43_ll_t; addr : access UInt8) return int  -- cyw43_ll.h:280
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_wifi_get_mac";

   function cyw43_ll_has_work (self : access cyw43_ll_t) return Extensions.bool  -- cyw43_ll.h:283
   with Import => True,
        Convention => C,
        External_Name => "cyw43_ll_has_work";

   function cyw43_cb_read_host_interrupt_pin (cb_data : System.Address) return int  -- cyw43_ll.h:286
   with Import => True,
        Convention => C,
        External_Name => "cyw43_cb_read_host_interrupt_pin";

   procedure cyw43_cb_ensure_awake (cb_data : System.Address)  -- cyw43_ll.h:287
   with Import => True,
        Convention => C,
        External_Name => "cyw43_cb_ensure_awake";

   procedure cyw43_cb_process_async_event (cb_data : System.Address; ev : access constant cyw43_async_event_t)  -- cyw43_ll.h:288
   with Import => True,
        Convention => C,
        External_Name => "cyw43_cb_process_async_event";

   procedure cyw43_cb_process_ethernet
     (cb_data : System.Address;
      itf : int;
      len : size_t;
      buf : access UInt8)  -- cyw43_ll.h:289
   with Import => True,
        Convention => C,
        External_Name => "cyw43_cb_process_ethernet";

end cyw43_ll_h;
